--- a/MUSHRA_COLAB/VBE_Test_drive.yaml
+++ b/MUSHRA_COLAB/VBE_Test_drive.yaml
@@ -10,12 +10,11 @@ pages:
     - type: generic
       id: first_page
       name: Welcome
-      content: Welcome to webMUSHRA!       
+      content: Welcome to webMUSHRA!The goal of this experiment is to evaluate the perceived quality of a new method for enhancing low frequencies; since the focus is on the bass and sub-bass range, it is essential to use high-quality headphones to correctly perceive the nuances. In each test trial, you will find a Reference file, which is the original unprocessed audio, and several test conditions to compare against it. Your task is to listen to the Reference and evaluate the quality of each condition by assigning a score from 0 to 100. Please note that an exact copy of the Reference (Hidden Reference) is always hidden among the test conditions and should ideally receive the maximum score. When rating, look for an improvement in bass depth and presence, but be careful not to reward tracks that introduce distortion, muddiness, or loss of clarity. A high score (80-100) indicates enhanced but clean and natural bass, while low scores should be assigned if there are audible artifacts, distortion, or if the sound becomes muddy and degraded compared to the original.      
     - type: mushra
       id: trial1
       name: MUSHRA
-      content: This training shows how to use our user interface. Please perform the underlined instructions to proceed with the training session. Reminder: In this MUSHRA listening test you are asked to rate the Bass Enhancement of each condition.<br/>Basic Audio Quality is a single and global attribute that is used to judge any and all detected differences between the reference and the condition.
-      showWaveform: true
+      content: This training shows how to use our user interface. Please perform the underlined instructions to proceed with the training session. The interface features a central waveform display of the audio track, accompanied by a horizontal timeline slider underneath that allows you to navigate or loop specific sections of the song as desired. A Stop button is located on the left to halt playback. The main Play button triggers the Reference track; you can then click on the individual Condition buttons to perform a rapid, seamless switch between the different processed versions for direct comparison. Below each condition, vertical sliders are provided to assign a quality score. Please keep in mind that one of these test conditions is a Hidden Reference, identical to the original audio.
       enableLooping: true 
       reference: ./MUSHRA_COLAB/mono_ref.wav
       createAnchor35: true
@@ -43,17 +42,17 @@ pages:
           - type: mushra
             id: trial_random_2
             name: MUSHRA - Random 2
-            content: Evaluate the quality of the Bass Enhancement.
+            content: Evaluate the quality of the Bass Enhancement. 
             enableLooping: true 
-            reference: ./MUSHRA_COLAB/8/reference_8.wav
+            reference: ./MUSHRA_COLAB/8/reference_51.wav
             createAnchor35: false
             createAnchor70: false
             stimuli:
-                C1: ./MUSHRA_COLAB/8/light_8.wav
-                C2: ./MUSHRA_COLAB/8/medium_8.wav
-                C3: ./MUSHRA_COLAB/8/heavy_8.wav
-                C4: ./MUSHRA_COLAB/8/glue_8.wav
-                C5: ./MUSHRA_COLAB/8/punchy_8.wav  
+                C1: ./MUSHRA_COLAB/8/light_51.wav
+                C2: ./MUSHRA_COLAB/8/medium_51.wav
+                C3: ./MUSHRA_COLAB/8/heavy_51.wav
+                C4: ./MUSHRA_COLAB/8/glue_51.wav
+                C5: ./MUSHRA_COLAB/8/punchy_51.wav  
           - type: mushra
             id: trial_random_3
             name: MUSHRA - Random 3
@@ -140,18 +139,18 @@ pages:
                 C5: ./MUSHRA_COLAB/43/punchy_43.wav
           - type: mushra
             id: trial_random_9
-            name: MUSHRA - Random 9
+            name: MUSHRA - Random 9.  
             content: Evaluate the quality of the Bass Enhancement.
             enableLooping: true 
-            reference: ./MUSHRA_COLAB/2/reference_2.wav
+            reference: ./MUSHRA_COLAB/2/reference_19.wav
             createAnchor35: false
             createAnchor70: false
             stimuli:
-                C1: ./MUSHRA_COLAB/2/light_2.wav
-                C2: ./MUSHRA_COLAB/2/medium_2.wav
-                C3: ./MUSHRA_COLAB/2/heavy_2.wav
-                C4: ./MUSHRA_COLAB/2/glue_2.wav
-                C5: ./MUSHRA_COLAB/2/punchy_2.wav
+                C1: ./MUSHRA_COLAB/2/light_19.wav
+                C2: ./MUSHRA_COLAB/2/medium_19.wav
+                C3: ./MUSHRA_COLAB/2/heavy_19.wav
+                C4: ./MUSHRA_COLAB/2/glue_19.wav
+                C5: ./MUSHRA_COLAB/2/punchy_19.wav
           - type: mushra
             id: trial_random_10
             name: MUSHRA - Random 10
